# AoC

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  config.tpp  log_1  log_2  pyproject.toml
aoc/2015/01/: main.cpp
aoc/2015/02/: main.cpp
aoc/2015/03/: main.cpp
aoc/2017/01/: main.cpp
aoc/2017/02/: main.cpp
aoc/2017/03/: main.cpp
aoc/2023/01/: main.cpp
aoc/2023/02/: main.cpp
aoc/2023/03/: main.cpp
aod/2023/01/: main.cpp
include/: dku.hpp  qrd.hpp
include/aoc/: file.hpp
include/aod/: file.hpp  primitives.hpp  std.hpp
include/dku/: csi.hpp  file.hpp  input.hpp  point.hpp  rgb.hpp  std.hpp  string.hpp  term.hpp  vector.hpp
include/qrd/: args.hpp  input.hpp  map.hpp  point.hpp  rgb.hpp  string.hpp  term.hpp  vector.hpp
scripts/: mejk
src/2015/01/: main.cpp
src/2015/02/: main.cpp
src/2015/03/: main.cpp
src/2016/01/: input.txt  main.cpp
src/2016/02/: main.cpp
src/2016/03/: main.cpp
src/2017/01/: main.cpp
src/2017/02/: main.cpp
src/2017/03/: main.cpp
src/2023/01/: main.cpp
src/2023/02/: main.cpp
src/2023/03/: main.cpp
src/2023/04/: main.cpp
src/2023/05/: main.cpp
src/2023/06/: main.cpp
src/2023/07/: main.cpp
src/2023/08/: main.cpp
src/2023/09/: main.cpp
src/2023/10/: main.cpp
src/2023/11/: main.cpp
src/2023/12/: main.cpp
src/2024/01/: main.cpp
src/2024/02/: main.cpp
src/2024/03/: main.cpp
src/2024/04/: main.cpp
src/2024/05/: main.cpp
src/2024/06/: main.cpp
src/2024/07/: main.cpp
src/2024/08/: main.cpp
src/2024/09/: main.cpp
src/2024/10/: main.cpp
src/2024/11/: main.cpp
src/2024/12/: main.cpp
